Caption: add periods to end

--- a/latex/ch1.tex
+++ b/latex/ch1.tex
@@ -29,9 +29,9 @@ Figure \ref{fig:stfttradeoff} shows a musical glockenspiel signal analyzed with 
 
 \begin{figure}[ht]
 	\centering
-	\subfloat[Wide window STFT (93ms)]{\includegraphics[width=0.6563\textwidth]{./images-tftheory/tf_tradeoff_balasz2.png}}\\
-	\subfloat[Narrow window STFT (6ms)]{\includegraphics[width=0.6563\textwidth]{./images-tftheory/tf_tradeoff_balasz1.png}}\\
-	\caption{Different window size STFT spectrograms of a glockenspiel signal \parencite[1]{jaillet}}
+	\subfloat[Wide window STFT (93ms).]{\includegraphics[width=0.6563\textwidth]{./images-tftheory/tf_tradeoff_balasz2.png}}\\
+	\subfloat[Narrow window STFT (6ms).]{\includegraphics[width=0.6563\textwidth]{./images-tftheory/tf_tradeoff_balasz1.png}}\\
+	\caption{Different window size STFT spectrograms of a glockenspiel signal \parencite[1]{jaillet}.}
 	\label{fig:stfttradeoff}
 \end{figure}
 
@@ -43,7 +43,7 @@ The Constant-Q Transform (CQT) was originally proposed by \textcite{jbrown} to a
 	\centering
 	\subfloat[Linear-frequency Fourier transform]{\includegraphics[width=0.6563\textwidth]{./images-tftheory/violindft.png}}\\
 	\subfloat[Constant-Q transform]{\includegraphics[width=0.6563\textwidth]{./images-tftheory/violincqt.png}}
-	\caption{Violin playing the diatonic scale, $G_{3} \text{(196Hz)} - G_{5} \text{(784Hz)}$ \parencite[430]{jbrown}}
+	\caption{Violin playing the diatonic scale, $G_{3} \text{(196Hz)} - G_{5} \text{(784Hz)}$ \parencite[430]{jbrown}.}
 	\label{fig:violin}
 \end{figure}
 
@@ -52,7 +52,7 @@ Building on the Gabor transform (or STFT), and using the Constant-Q Transform as
 \begin{figure}[ht]
 	\centering
 	\includegraphics[width=0.6563\textwidth]{./images-tftheory/tf_tradeoff_balasz3.png}
-	\caption{NSGT spectrogram of a glockenspiel signal, varying window (6--93ms) \parencite[4]{jaillet}}
+	\caption{NSGT spectrogram of a glockenspiel signal, varying window (6--93ms) \parencite[4]{jaillet}.}
 	\label{fig:nsgttradeoff}
 \end{figure}
 
