Subfloat: add periods to end

--- a/latex/ch1.tex
+++ b/latex/ch1.tex
@@ -41,8 +41,8 @@ The Constant-Q Transform (CQT) was originally proposed by \textcite{jbrown} to a
 
 \begin{figure}[ht]
 	\centering
-	\subfloat[Linear-frequency Fourier transform]{\includegraphics[width=0.6563\textwidth]{./images-tftheory/violindft.png}}\\
-	\subfloat[Constant-Q transform]{\includegraphics[width=0.6563\textwidth]{./images-tftheory/violincqt.png}}
+	\subfloat[Linear-frequency Fourier transform.]{\includegraphics[width=0.6563\textwidth]{./images-tftheory/violindft.png}}\\
+	\subfloat[Constant-Q transform.]{\includegraphics[width=0.6563\textwidth]{./images-tftheory/violincqt.png}}
 	\caption{Violin playing the diatonic scale, $G_{3} \text{(196Hz)} - G_{5} \text{(784Hz)}$ \parencite[430]{jbrown}.}
 	\label{fig:violin}
 \end{figure}
