--- a/latex/ch4.tex
+++ b/latex/ch4.tex
@@ -54,8 +54,8 @@ The parameter search script ran for 60 iterations using random combinations of s
 
 \begin{figure}[ht]
 	\centering
-	\subfloat[Best sliCQT from MPI oracle parameter search]{\includegraphics[width=0.6328\textwidth]{./images-gspi/slicqt_good.png}}\\
-	\subfloat[STFT, X-UMX default]{\includegraphics[width=0.6328\textwidth]{./images-gspi/glock_stft_4096.png}}
+	\subfloat[Best sliCQT from MPI oracle parameter search.]{\includegraphics[width=0.6328\textwidth]{./images-gspi/slicqt_good.png}}\\
+	\subfloat[STFT, X-UMX default.]{\includegraphics[width=0.6328\textwidth]{./images-gspi/glock_stft_4096.png}}
 	\caption{Magnitude spectrogram comparison; sliCQT vs. STFT.}
 	\label{fig:bipolarslicqs}
 \end{figure}
@@ -203,8 +203,8 @@ The music demixing performance of the trained model of xumx-sliCQ with the CDAE 
 
 \begin{figure}[ht]
 	\centering
-	\subfloat[Train loss]{\includegraphics[width=0.9375\textwidth]{./images-neural/train_loss.png}}\\
-	\subfloat[Validation loss]{\includegraphics[width=0.9375\textwidth]{./images-neural/valid_loss.png}}
+	\subfloat[Train loss.]{\includegraphics[width=0.9375\textwidth]{./images-neural/train_loss.png}}\\
+	\subfloat[Validation loss.]{\includegraphics[width=0.9375\textwidth]{./images-neural/valid_loss.png}}
 	\caption{Tensorboard loss curves for xumx-sliCQ using the CDAE architecture.}
 	\label{fig:networkloss}
 \end{figure}
